<resources>
    <string name="app_name">OrderApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_todo">TODO</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_password_vi">Mật khẩu</string>
    <string name="string_login">Login</string>
    <string name="string_login_vi">Đăng nhập</string>
    <string name="string_not_exist_an_account">Doesn\'t exist an account?</string>
    <string name="string_not_exist_an_account_vi">Chưa có tài khoản?</string>
    <string name="string_sign_up">Sign up</string>
    <string name="string_sign_up_vi">Đăng ký</string>
    <string name="string_name">Name</string>
    <string name="string_sign_up_now">Sign up now!</string>
    <string name="string_sign_up_now_vi">Đăng ký ngay!</string>
    <string name="string_already_have_an_account">Already have an account?</string>
    <string name="string_already_have_an_account_vi">Đã có tài khoản?</string>
    <string name="string_grocery_shopping_has_never_been_this_much_fun">Grocery shopping has never been this much fun.</string>
    <string name="string_long_txt">Grocery shopping has never been this much fun. Grocery shopping has never been this much fun. Grocery shopping has never been this much fun. Grocery shopping has never been this much fun. Grocery shopping has never been this much fun. Grocery shopping has never been this much fun.</string>
    <string name="string_donot_have_an_account">Don\'t have an account?</string>
    <string name="string_donot_have_an_account_vi">Don\'t have an account?</string>
    <string name="string_note">Receipt</string>
    <string name="string_contact">Contact</string>
    <string name="string_notification">Notification</string>
    <string name="string_profile">Profile</string>
    <string name="string_cart">Cart</string>
    <string name="string_cart_vi">Giỏ hàng</string>
    <string name="string_home">Home</string>
    <string name="string_offline">Bạn đang ngoại tuyến</string>
    <string name="string_welcome">Welcome!</string>
    <string name="string_let_s_make_some_order">let\'s make some order</string>
    <string name="string_let_s_make_some_order_vi">bắt đầu đặt món thôi!</string>
    <string name="string_find_anything_here">find anything here</string>
    <string name="string_suggest">Gợi ý cho bạn</string>
    <string name="string_danh_muc_san_pham">Danh mục các sản phẩm</string>
    <string name="string_san_pham_noi_bat">Sản phẩm nổi bật</string>
    <string name="string_thong_tin_san_pham">Thông tin sản phẩm</string>
    <string name="string_decrease">-</string>
    <string name="string_increase">+</string>
    <string name="string_details">Details</string>
    <string name="string_description">Description</string>
    <string name="string_add_to_cart">Add to cart</string>
    <string name="string_subtotal">Subtotal</string>
    <string name="string_delivery">Delivery</string>
    <string name="string_free">Free</string>
    <string name="string_total">Total:</string>
    <string name="string_checkout">Checkout</string>
    <string name="string_total_price">Total Price</string>
    <string name="string_check_cart">Bạn chưa có đơn hàng nào trong giỏ</string>
    <string name="string_purchase">Thanh toán</string>
    <string name="string_complete_purchase">Hoàn tất thanh toán</string>
    <string name="string_phone_number">Phone number</string>
    <string name="string_address">Address</string>
    <string name="string_note_writing_vi">Ghi chú</string>
    <string name="string_type_purchase">Phương thức thanh toán</string>
    <string name="string_order_detail">Chi tiết đơn hàng</string>
    <string name="string_confirm">Xác nhận</string>
    <string name="string_update_vi">Cập nhật</string>
    <string name="string_update_profile_vi">Cập nhật thông tin</string>
    <string name="string_sign_in_with_google">Sign in with Google</string>
    <string name="fm_time">HH:mm:ss</string>
    <string name="fm_date"> dd-MM-yyyy</string>
    <string-array name="spinner_purchase">
        <item>Thanh toán khi nhận hàng</item>
    </string-array>
    <string-array name="spinner_update_receipt">
        <item>Chọn mục</item>
        <item>Hủy đơn hàng</item>
    </string-array>
    <string-array name="spinner_manage_invoice">
        <item>Tất cả</item>
        <item>Đang giao hàng</item>
        <item>Đang xử lý</item>
        <item>Giao hàng thành công</item>
        <item>Hủy đơn hàng</item>
    </string-array>
    <string-array name="spn_manage_invoice">
        <item>Chọn mục</item>
        <item>Đang giao hàng</item>
        <item>Đang xử lý</item>
        <item>Giao hàng thành công</item>
        <item>Hủy đơn hàng</item>
    </string-array>
    <string-array name="spn_manage_product">
        <item>Tất cả</item>
        <item>Cơm</item>
        <item>Lẩu</item>
        <item>Phở</item>
        <item>Đồ ăn nhanh</item>
        <item>Đồ uống</item>
        <item>Đồ ăn vặt</item>
    </string-array>
    <string-array name="spn_product_manager">
        <item>Cơm</item>
        <item>Lẩu</item>
        <item>Phở</item>
        <item>Đồ ăn nhanh</item>
        <item>Đồ uống</item>
        <item>Đồ ăn vặt</item>
    </string-array>
    <string-array name="spn_add_product_manager">
        <item>Chọn mục</item>
        <item>Cơm</item>
        <item>Lẩu</item>
        <item>Phở</item>
        <item>Đồ ăn nhanh</item>
        <item>Đồ uống</item>
        <item>Đồ ăn vặt</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="string_cost_vi">Đơn giá</string>
    <string name="string_history_vi">Lịch sử</string>
    <string name="string_purchase_total_vi">Tổng tiền:</string>
    <string name="string_purchase_type_vi">Hình thức:</string>
    <string name="string_receipt_code_vi">Mã đơn hàng:</string>
    <string name="string_full_name_vi">Họ tên:</string>
    <string name="enter_value_vi">Nhập thông tin</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_to_delete_this_product">Are you sure to delete this product?</string>
</resources>