<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- item's id must same fragment's id in navigation graph -->
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/string_home" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_trolley"
        android:title="@string/string_cart" />

    <item
        android:id="@+id/receiptFragment"
        android:icon="@drawable/ic_note"
        android:title="@string/string_note" />

    <item
        android:id="@+id/contactFragment"
        android:icon="@drawable/ic_contact"
        android:title="@string/string_contact" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/string_profile" />
</menu>