<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView_login"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:contentDescription="@string/string_todo"
            android:src="@drawable/img_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Required*"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_login"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_input_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_email"
                android:inputType="text"
                android:maxLength="26" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_passwd_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="password_toggle"
            app:helperText="Required*"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_email_login"
            app:startIconDrawable="@drawable/ic_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_input_passwd_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login_now"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/corner_btn_login"
            android:backgroundTint="#49d1c2"
            android:text="@string/string_login"
            app:layout_constraintEnd_toEndOf="@+id/txt_input_passwd_login"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/txt_input_passwd_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_passwd_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_now"
            app:layout_constraintStart_toStartOf="@+id/btn_login_now"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_now">

            <TextView
                android:id="@+id/tv_not_exist_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_not_exist_an_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_click_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/string_sign_up"
                android:textAllCaps="true"
                android:textColor="#49d1c2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>